[package]
name = "solace_rust"
version = "0.1.4"
edition = "2024"
authors = ["Kayano <Kayano04@outlook.jp>"]
description = "Zig的包管理工具"
license = "MIT"
repository = "https://github.com/KayanoLiam/solace.git"
homepage = "https://github.com/KayanoLiam/solace.git"
readme = "README.md"
documentation = "https://docs.rs/solace_rust"

[[bin]]
name = "solace"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"